# NWAFU-OOP-Based-C-Circuit-Drawing-Simulation-System

./: Ammeter.cpp  Branch.cpp  Branch.h  Bulb.cpp  Bulb.h  CMakeLists.txt  Circuit.cpp  Circuit.h  CircuitException.h  CircuitSim.pro  Component.cpp  Component.h  ComponentFactory.cpp  ComponentFactory.h  LinearSolver.cpp  LinearSolver.h  MNASolver.cpp  Node.cpp  Node.h  PROJECT_SUMMARY.md  Port.h  PowerSource.cpp  PowerSource.h  README.md  README.txt  Resistor.cpp  Switch.cpp  Voltmeter.cpp  build.bat  graphcomponent.h  main.cpp  resistoritem.h  run.bat
Dianlu2/: Ammeter.cpp  Ammeter.h  Capacitor.cpp  Capacitor.h  CircuitSolver.cpp  CircuitSolver.h  Component.cpp  Component.h  Inductor.cpp  Inductor.h  LightBulb.cpp  LightBulb.h  PowerSource.cpp  PowerSource.h  Resistor.cpp  Resistor.h  Switch.cpp  Switch.h  Voltmeter.cpp  Voltmeter.h  main.cpp
Serialize/: CircuitFileValidator.cpp  CircuitFileValidator.h  CircuitJsonSerializer.cpp  CircuitJsonSerializer.h  SimulationLogger.cpp  SimulationLogger.h
UI/: CMakeLists.txt  capacitoritem.h  circuitscene.cpp  circuitscene.h  componentitems.h  graphcomponent.cpp  graphcomponent.h  grounditem.h  inductoritem.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resistoritem.h  switchitem.h  wireitem.cpp  wireitem.h
code/: CMakeLists.txt  capacitoritem.h  graphcomponent.cpp  grounditem.h  inductoritem.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
code_3/: graphcomponent.cpp  graphcomponent.h  mainwindow.cpp  mainwindow.ui  resistoritem.h  switchitem.h
include/: Ammeter.h  Branch.h  Bulb.h  Capacitor.h  Circuit.h  CircuitException.h  CircuitValidator.h  Component.h  ComponentFactory.h  Ground.h  Inductor.h  LinearSolver.h  MNASolver.h  Node.h  Port.h  PowerSource.h  Resistor.h  SimulationLogger.h  SimulationResult.h  Switch.h  Voltmeter.h
src/: Ammeter.cpp  Branch.cpp  Bulb.cpp  Capacitor.cpp  Circuit.cpp  CircuitValidator.cpp  Component.cpp  ComponentFactory.cpp  Ground.cpp  Inductor.cpp  LinearSolver.cpp  MNASolver.cpp  Node.cpp  Port.cpp  PowerSource.cpp  Resistor.cpp  SimulationLogger.cpp  Switch.cpp  Voltmeter.cpp  main.cpp
备用选项/: 实习代码.cpp  实习代码序化.cpp
序化/: 6.cpp  8.cpp  9.cpp  Circuit.h.cpp  CircuitFileValidator.cpp.cpp  CircuitFileValidator.h.cpp  CircuitJsonSerializer.cpp.cpp  CircuitJsonSerializer.h.cpp  SimulationLogger.h.cpp
